--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>AI Assistant</title>
+</head>
+<body>
+  <h1>Talk to Your Assistant</h1>
+  <form method="post" action="/ask">
+    <input type="text" name="user_input" placeholder="Ask something..." required>
+    <button type="submit">Send</button>
+  </form>
+
+  {% if response %}
+    <h2>Response:</h2>
+    <p>{{ response }}</p>
+  {% endif %}
+</body>
+</html>
 
